[package]
name = "rust-deno-wasm"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ResponseInit",
  "ReadableStream",
  "Uint8Array",
] }


[profile.release]
lto = true
